ai-services/open-notebook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-notebook
  namespace: open-notebook
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: open-notebook
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-notebook
    spec:
      containers:
      - name: open-notebook
        # renovate: datasource=github-releases depname=lfnovo/open-notebook versioning=docker
        image: ghcr.io/lfnovo/open-notebook:1.1.0-single
        ports:
        - name: nextjs
          containerPort: 8502
        volumeMounts:
        - name: noteobok_storage
          mountPath: /app/data
      volumes:
      - name: notebook_storage
        persistentVolumeClaim:
          claimName: open-notebook-notebook-nfs-pvc
      - name: surrealdb_storage
        persistentVolumeClaim:
          claimName: open-notebook-surrealdb-nfs-pvc
