ai-services/open-notebook/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-notebook-route
  namespace: open-notebook   
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - open-notebook.crobceratops.ryanbeales.com
    - open-notebook.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''	
          kind: Service
          name: nextjs
          port: 8502
          weight: 1
